# Yolo-FastestV2

./: .gitignore  CMakeLists.txt  README.md  anchors6.txt  cam_test.py  cctv_test.py  coco_convert.py  coco_demo.py  export_model.py  fiftyone_dataset.py  get_libtorch.sh  my_test.py  rtsp_server.py  text_on_cam.py  train_generator.py
data/: Bicycle  fo.data  my.data  obj.names
include/: utils.h
modelzoo/: cam-101-0.138590ap-model.pth  cam-101-0.140181ap-model.pth  cam-101-0.179470ap-model.pth  fiftyone-open-0.046807ap-model.pth
src/: main.cpp  utils.cpp
